--- a/static/index.html
+++ b/static/index.html
@@ -32779,7 +32779,7 @@
 					<label class="control-label">Url</label>
 
 					<div class="controls">
-						<input type="text" onchange="OnChangeUrl()" id="url_id" class="form-control" value="http://mirror.yandex.ru/ubuntu-cdimage/releases/15.10/alpha-2/source/wily-src-1.iso">
+						<input type="text" onchange="OnChangeUrl()" id="url_id" class="form-control" value="http://pinegrow.s3.amazonaws.com/PinegrowLinux64.2.2.zip">
 					</div>
 					<label class="control-label">Save path</label>
 
