--- a/static/index.html
+++ b/static/index.html
@@ -32784,7 +32784,7 @@
 					<label class="control-label">Save path</label>
 
 					<div class="controls">
-						<input type="text" id="save_path_id" class="form-control" value="wily-src-1.iso">
+						<input type="text" id="save_path_id" class="form-control" value="PinegrowLinux64.2.2.zip">
 					</div>
 					<label class="control-label">Parts count</label>
 					<select class="form-control" id="part_count_id">
