Update color style

--- a/static/index.html
+++ b/static/index.html
@@ -25431,8 +25431,8 @@
 		font-family: Georgia, "Times New Roman", Times, serif;
 		font-size: 15px;
 		line-height: 1.428571429;
-		color: #777;
-		background-color: #fff
+		color: #59b300;
+		background-color: #000
 		}
 
 		input,
@@ -26713,7 +26713,7 @@
 		.table>thead>tr.active>th,
 		.table>tbody>tr.active>th,
 		.table>tfoot>tr.active>th {
-		background-color: #f5f5f5
+		background-color: #212121;
 		}
 
 		.table>thead>tr>td.success,
@@ -26728,8 +26728,9 @@
 		.table>thead>tr.success>th,
 		.table>tbody>tr.success>th,
 		.table>tfoot>tr.success>th {
-		background-color: #dff0d8;
-		border-color: #d6e9c6
+		background-color: #c09853;
+		border-color: #953b39;
+		color: #010101;
 		}
 
 		.table-hover>tbody>tr>td.success:hover,
@@ -29940,8 +29941,8 @@
 		}
 
 		.navbar-inverse {
-		background-color: #eb6864;
-		border-color: #e53c37
+		background-color: #010101;
+		border-color: #010101
 		}
 
 		.navbar-inverse .navbar-brand {
@@ -30600,7 +30601,7 @@
 		height: 21px;
 		margin-bottom: 21px;
 		overflow: hidden;
-		background-color: #f5f5f5;
+		background-color: #212121;
 		border-radius: 4px;
 		-webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 		box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1)
@@ -30613,7 +30614,7 @@
 		font-size: 13px;
 		color: #fff;
 		text-align: center;
-		background-color: #eb6864;
+		background-color: #187f36;
 		-webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
 		box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
 		-webkit-transition: width .6s ease;
